Remove use of WS_EX_COMPOSITED for translucent windows.

This style causes windows to display transparent on Windows 10 creators
update with some Intel drivers on D3D9.

The style itself is unnecessary, becasue based on its documentation it
doesn't affect top-level window rendering, but affects only how child
unredirected windows (which aren't used in Aura) render on top of their
parents.

BUG=712196

Review-Url: https://codereview.chromium.org/2826343002
Cr-Commit-Position: refs/heads/master@{#466207}

Former-commit-id: fec5a00d881dcf85a1a4334af1369402e183a302