ui/base/win/internal_constants.h
@@ -13,6 +13,11 @@ namespace ui {
 // touch based WM_MOUSEACTIVATE message.
 UI_BASE_EXPORT extern const wchar_t kIgnoreTouchMouseActivateForWindow[];
 
+// This property is put on an HWND so the compositor output knows to treat it
+// as transparent and draw to it using WS_EX_LAYERED (if using the software
+// compositor).
+UI_BASE_EXPORT extern const wchar_t kWindowTranslucent[];
+
 }  // namespace ui
 
 #endif  // UI_BASE_WIN_INTERNAL_CONSTANTS_H_
