ui/views/widget/desktop_aura/desktop_window_tree_host_win.cc
@@ -45,8 +45,8 @@ namespace views {
 
 namespace {
 
-gfx::Size GetExpandedWindowSize(DWORD window_style, gfx::Size size) {
-  if (!(window_style & WS_EX_COMPOSITED) || !ui::win::IsAeroGlassEnabled())
+gfx::Size GetExpandedWindowSize(bool is_translucent, gfx::Size size) {
+  if (!is_translucent || !ui::win::IsAeroGlassEnabled())
     return size;
 
   // Some AMD drivers can't display windows that are less than 64x64 pixels,
@@ -224,8 +224,8 @@ bool DesktopWindowTreeHostWin::IsVisible() const {
 void DesktopWindowTreeHostWin::SetSize(const gfx::Size& size) {
   gfx::Size size_in_pixels = display::win::ScreenWin::DIPToScreenSize(GetHWND(),
                                                                       size);
-  gfx::Size expanded = GetExpandedWindowSize(
-      message_handler_->window_ex_style(), size_in_pixels);
+  gfx::Size expanded =
+      GetExpandedWindowSize(message_handler_->is_translucent(), size_in_pixels);
   window_enlargement_ =
       gfx::Vector2d(expanded.width() - size_in_pixels.width(),
                     expanded.height() - size_in_pixels.height());
@@ -246,8 +246,8 @@ void DesktopWindowTreeHostWin::CenterWindow(const gfx::Size& size) {
   gfx::Size size_in_pixels = display::win::ScreenWin::DIPToScreenSize(GetHWND(),
                                                                       size);
   gfx::Size expanded_size;
-  expanded_size = GetExpandedWindowSize(message_handler_->window_ex_style(),
-                                        size_in_pixels);
+  expanded_size =
+      GetExpandedWindowSize(message_handler_->is_translucent(), size_in_pixels);
   window_enlargement_ =
       gfx::Vector2d(expanded_size.width() - size_in_pixels.width(),
                     expanded_size.height() - size_in_pixels.height());
@@ -539,7 +539,7 @@ void DesktopWindowTreeHostWin::SetBoundsInPixels(const gfx::Rect& bounds) {
 
   gfx::Rect new_expanded(
       expanded.origin(),
-      GetExpandedWindowSize(message_handler_->window_ex_style(),
+      GetExpandedWindowSize(message_handler_->is_translucent(),
                             expanded.size()));
   window_enlargement_ =
       gfx::Vector2d(new_expanded.width() - expanded.width(),
